--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                                 Full Stack Developer
                             </p>
                             <p class="desc">
-                                Self-taught Full STack Developer based in Wisconsin.
+                                Self-taught Full Stack Developer based in Wisconsin.
                             </p>
                             <div class="btn-bar">
                                 <a href="./images/MyResume.pdf" target="_blank">Download CV</a>
@@ -175,26 +175,27 @@
                                                 <label>Name:</label>
                                                 <span>Tsuyoshi Harayama</span>
                                             </li>
-                                            <li>
+                                            <!-- <li>
                                                 <label>Birthday:</label>
                                                 <span>August 1st 2002</span>
                                             </li>
                                             <li>
                                                 <label>Age:</label>
                                                 <span>19 Years</span>
-                                            </li>
+                                            </li> -->
                                             <li>
                                                 <label>Location:</label>
                                                 <span>Milwaukee</span>
+                                            </li>
+                                            <li>
+                                                <label>Phone:</label>
+                                                <span>+1(224) 944-1454</span>
                                             </li>
                                         </ul>
                                     </div>
                                     <div class="col-sm-6">
                                         <ul>
-                                            <li>
-                                                <label>Phone:</label>
-                                                <span>+1(224) 944-1454</span>
-                                            </li>
+
                                             <li>
                                                 <label>Email:</label>
                                                 <span>tharayama81@gmail.com</span>
