--- a/index.html
+++ b/index.html
@@ -287,10 +287,58 @@
                             <div class="col-lg-4">
                                 <ul class="education-box">
                                     <li>
-                                        <span>Company: i.c.stars |* Milwaukee</span> <br>
-                                        <span>July 2021 - Present</span>
-                                        <h6>Resident, Technical Analyst Intern</h6>
-                                        <p>i.c.stars' rigorous four-month technology trainning and leadership program
+
+                                        <div class="work-title">
+                                            <img src="./images/GE.png" alt="">
+                                            <h6>GE Healthcare</h6>
+                                        </div>
+                                        <p><br>
+                                            <strong>
+                                                Software Engineer | DTDP (Digital Technology Development Program) Intern
+                                            </strong><br>
+                                            <span>June 2022 - Present</span>
+                                            <br><br>
+                                            • Wrote software to help 12k Field Engineers, globally, easily and quickly
+                                            troubleshoot network, device and access
+                                            related problems while connecting a device in the hospital to GE back
+                                            office.
+                                            <br><br>
+                                            • Received training on cloud technologies, hands-on software engineering in
+                                            a language of choice and learn networking.
+                                        </p>
+                                    </li>
+                                    <li>
+                                        <div class="work-title">
+                                            <img src="./images/icstars.jfif" alt="">
+                                            <h6>i.c.stars |* Milwaukee</h6>
+                                        </div>
+                                        <p><br>
+                                            <strong>Technical Analyst Intern</strong>
+                                            <br>
+                                            <span>July 2021 - Nov 2021</span>
+                                            <br><br>
+                                            • Immersed myself in project-based assignments within the agile framework
+                                            and
+                                            attended weekly training on JavaScript, SQL, CSS3 & HTML5.
+                                            <br><br>
+                                            • Ideating on multiple user perspectives & incorporating them into mockups &
+                                            prototypes, utilizing best in class tools, methods, and processes.
+                                            <br><br>
+                                            • Utilized SQL for a 7-day series of timed technical challenges.
+                                            <br><br>
+                                            • Quickly developed three websites from wireframe to finish incorporating
+                                            client's
+                                            feedbacks and edits.
+                                            <br><br>
+                                            <strong>Resident</strong>
+                                            <br>
+                                            <span>May 2022 - Present</span>
+                                            <br><br>
+                                            • As a resident, my role is to contribute back to the community by
+                                            volunteering and mentor one of the interns at
+                                            i.c.stars |* Milwaukee to develop more leaders in the community.
+                                        </p>
+                                        <!-- <p>i.c.stars' rigorous four-month technology trainning and leadership program
                                             offers 1,000+ hours of immersice, hands-on,
                                             prject-based learning in a fast-paced Agile enviroment. I was the part of
                                             cycle 8, where I was considered as one of the
@@ -300,7 +348,7 @@
                                             problem, even the staff. Being a resident,
                                             my role now is to develop more leaders in the upcoming Cycles by teaching
                                             JavaScript, React, and mentoring one of the
-                                            interns.</p>
+                                            interns.</p> -->
                                     </li>
                                 </ul>
                             </div>
@@ -340,6 +388,14 @@
                                     <span>React.js</span>
                                 </div>
                                 <div class="progress-line react">
+                                    <span></span>
+                                </div>
+                            </div>
+                            <div class="bar">
+                                <div class="info">
+                                    <span>Python</span>
+                                </div>
+                                <div class="progress-line python">
                                     <span></span>
                                 </div>
                             </div>
