--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
                                             <br>
                                             <span> Nov 2021 - Present</span>
                                             <br><br>
-                                            • As a resident, my role is to contribute back to the community by
+                                            • Contributed back to the community by
                                             volunteering and mentor one of the interns at
                                             i.c.stars |* Milwaukee to develop more leaders in the community.
                                             <br><br>
