--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 </div>
             </div>
             <div class="container">
-                <div class="me" style="background-image:url(./images/background-img.jpg)"></div>
+                <div class="me" style="background-image:url(./images/background2.jpg)"></div>
                 <div class="row full-screen align-items-center">
                     <div class="col-lg-7">
                         <div class="home-box">
@@ -124,7 +124,7 @@
                     <div class="col-lg-4">
                         <div class="about-me reveal">
                             <div class="img" data-wow-duration="0.5s">
-                                <img src="./images/profile-pic.HEIC" alt="">
+                                <img src="./images/background.jpg" alt="">
                             </div>
                             <div class="info">
                                 <p>Full Stack Developer</p>
