--- a/index.html
+++ b/index.html
@@ -298,13 +298,20 @@
                                             </strong><br>
                                             <span>June 2022 - Present</span>
                                             <br><br>
-                                            • Wrote software to help 12k Field Engineers, globally, easily and quickly
-                                            troubleshoot network, device and access
-                                            related problems while connecting a device in the hospital to GE back
-                                            office.
+• Wrote software to help 12k Field Engineers, globally, easily and quickly troubleshoot network, device and access related problems while connecting a
+device in the hospital to GE back office.
                                             <br><br>
-                                            • Received training on cloud technologies, hands-on software engineering in
-                                            a language of choice and learn networking.
+ • Received comprehensive training on various cloud technologies, hands-on software engineering in python and learn networking fundamentals,
+such as routing and switching protocols, to gain a better understanding of the networking landscape.
+                                            <br><br>
+• Debugged and optimized complex Python script to improve its performance and efficiency.
+                                            <br><br>
+• Performed comprehensive testing of the software using Windows and Linux Command on a Virtual Machine, verifying system performance and
+functionality to ensure it met the requirements specified by the client.
+                                            <br><br>
+                                            • Developed and implemented a trader bot using Python as a personal coding project throughout my internship and presented the completed project
+to the team for evaluation.
+
                                         </p>
                                     </li>
                                     <li>
