--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                                 Self-taught Full Stack Developer based in Wisconsin.
                             </p>
                             <div class="btn-bar">
-                                <a href="./images/MyResume.pdf" target="_blank">Download CV</a>
+                                <a href="./images/Resume2022.pdf" target="_blank">Download CV</a>
                             </div>
                         </div>
                     </div>
